--- a/Portfolio-website/css/styles.css
+++ b/Portfolio-website/css/styles.css
@@ -29,70 +29,34 @@ header {
     width: 100%;
     top: 0;
     z-index: 1000;
-  }
-  
-  nav {
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-  }
-  
-  nav ul {
-    list-style: none;
+}
+
+.mainMenu {
     display: flex;
+    list-style: none;
     margin: 0;
     padding: 0;
-  }
-  
-  nav ul li {
-    margin-left: 20px;
-  }
-  
-  .openMenu, .closeMenu {
+    
+}
+
+.mainMenu li {
+    margin-left: 70px;
+    
+}
+
+.menuToggle {
     display: none;
     cursor: pointer;
-  }
-  
-  .mainMenu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px; 
-    left: 0;
-    width: 100%;
-    background-color: rgb(212, 62, 3);
-    padding: 20px;
-  }
-  
-  .mainMenu.active {
-    display: flex;
-  }
-  
-  .menuToggle {
-    cursor: pointer;
-  }
-  
-  /* @media (min-width: 768px) {
-    .menuToggle {
-      display: none;
-    }
-  
-    .mainMenu {
-      display: flex;
-      flex-direction: row;
-      position: static;
-      width: auto;
-      background-color: transparent;
-      padding: 0;
-    }
-  
-    .mainMenu li {
-      margin-left: 20px;
-    }
-  } */
+}
 
 section {
     padding: 40px 0;
@@ -122,34 +86,33 @@ section {
     text-align: left;
 }
 
-.intro-text h1 {
+/* .intro-text h1 {
     font-size: 29px;
     color: #c0392b;
     margin-left: 60px;
-}
+} */
 
-.intro-text p {
+.intro-text p  {
     font-size: 20px;
-    color: black;
+    color: #c0392b;
     margin-left: 60px;
 }
 
 .img-ctn {
     flex: 0 0 auto;
     margin-right: 60px;
-    /* text-align: center; */
+    
 }
 
 .img-ctn img {
-    width: 250px; /* Increase the width */
-    height: auto; /* Maintain aspect ratio */
+    width: 250px; 
+    height: auto; 
     border-radius: 10%;
     border: 3px solid #e74c3c;
-    margin-top: 40px;
+    margin-top: 80px;
 }
 
 /* About Section */
-/* Section Styles */
 section {
     padding: 40px 0;
     width: 90%;
@@ -219,10 +182,10 @@ section {
 }
 
 .project {
-    flex-basis: 30%;
+    flex-basis: 25%;
     background: #fff;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(218, 10, 10, 0.1);
     border-radius: 8px;
     text-align: center;
 }
@@ -242,6 +205,13 @@ section {
 /* Contact Section */
 #contact {
     text-align: center;
+}
+
+#contact h1 {
+    text-align: center;
+    font-size: 2.5em;
+    margin-bottom: -10px;
+    color: #c0392b;
 }
 
 #contact h2 {
