adjusted some features

--- a/Portfolio-website/css/media.css
+++ b/Portfolio-website/css/media.css
@@ -85,7 +85,7 @@
         top: 60px;
         left: 0;
         width: 100%;
-        background-color: rgb(212, 62, 3);
+        background-color: #6b504d;
         padding: 20px;
     }
 
